mobile layout fixes
Updated portfolio images and descriptions for better clarity.

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -216,7 +216,7 @@
     <!-- 2: Удаление зубов -->
     <div class="skills__content skills__close">
       <div class="skills__header">
-        <i class="uil uil-medical-alt skills__icon"></i>
+        <i class="uil uil-syringe skills__icon"></i>
         <div>
           <h1 class="skills__title">Удаление зубов</h1>
         </div>
@@ -260,7 +260,7 @@
     <!-- 4: Протезирование -->
     <div class="skills__content skills__close">
       <div class="skills__header">
-        <i class="uil uil-tooth-alt skills__icon"></i>
+        <i class="uil uil-constructor skills__icon"></i>
         <div>
           <h1 class="skills__title">Протезирование</h1>
         </div>
@@ -304,8 +304,7 @@
     <!-- 6: Чистка зубов -->
     <div class="skills__content skills__close">
       <div class="skills__header">
-        <!-- Example icon. You can change if “uil-brush” doesn’t exist -->
-        <i class="uil uil-brush skills__icon"></i>
+        <i class="uil uil-shield-check skills__icon"></i>
         <div>
           <h1 class="skills__title">Чистка зубов</h1>
         </div>
@@ -387,20 +386,22 @@
             </div>
 
             <div class="portfolio__content grid swiper-slide">
-              <img src="assets/img/outdoor1.JPG" class="portfolio__img" alt="Оборудование" />
+              <img src="assets/img/outdoor1.JPG" class="portfolio__img" alt="Вход в клинику" />
               <div class="portfolio__data">
                 <h3 class="portfolio__title">Вход в клинику</h3>
-                
+                <p class="portfolio__description">
+                  Удобный и доступный вход в нашу стоматологическую клинику в самом центре Чиланзарского района.
+                </p>
               </div>
             </div>
 
-
-
             <div class="portfolio__content grid swiper-slide">
-              <img src="assets/img/outdoor3.JPG" class="portfolio__img" alt="Оборудование" />
+              <img src="assets/img/outdoor3.JPG" class="portfolio__img" alt="Внешний вид клиники" />
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Вход в клинику</h3>
-                
+                <h3 class="portfolio__title">Внешний вид клиники</h3>
+                <p class="portfolio__description">
+                  Современный фасад здания клиники Trust Dental, где вас встретят опытные специалисты.
+                </p>
               </div>
             </div>
 
