--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trust Dental Clinic</title>
+    <title>Trust Dental</title>
+
+    <!-- Favicon (Browser Tab Icon) -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon.png" />
+
     <!-- Подключение CSS -->
     <link rel="stylesheet" href="assets/swiper-bundle.min.css" />
     <link rel="stylesheet" href="assets/newcss.css" />
