num changed, tg/whatsapp updated

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -441,7 +441,7 @@
         <div>
           <h3 class="contact__title">Телефон</h3>
           <span class="contact__subtitle">
-            <a href="tel:+998903477727">+998 (90) 347-77-27</a><br/>
+            <a href="tel:+998333477727">+998 (33) 347-77-27</a><br/>
             <a href="tel:+998970004366">+998 (97) 000-43-66</a><br/>
             <a href="tel:+998335695525">+998 (33) 569-55-25</a>
           </span>
@@ -453,7 +453,7 @@
         <div>
           <h3 class="contact__title">Telegram</h3>
           <span class="contact__subtitle">
-            <a href="https://t.me/dent1ad" target="_blank">
+            <a href="https://t.me/AADDENTAL" target="_blank">
               Написать в Telegram
             </a>
           </span>
@@ -465,7 +465,7 @@
         <div>
           <h3 class="contact__title">Whatsapp</h3>
           <span class="contact__subtitle">
-            <a href="https://wa.me/998335695525" target="_blank">
+            <a href="https://wa.me/998333477727" target="_blank">
               Написать в Whatsapp
             </a>
           </span>
